# try005

./: ARCHITECTURE.md  Cargo.toml  README.md  install.sh
src/: error.rs  main.rs
src/handlers/: cnpg.rs  health.rs  kubeflow.rs  mod.rs
src/models/: cnpg.rs  kubeflow.rs  mod.rs
src/resources/: cnpg.rs  kubeflow.rs  mod.rs
src/utils/: mod.rs  validation.rs
